<resources>
    <string name="app_name">CareMe</string>
    <string name="logo">logo</string>
    <string name="careme">Care Me</string>
    <string name="login">Вход</string>
    <string name="sign_up">регистрация</string>
    <string name="copyright">© Copyrights. All rights are reserved</string>
    <string name="email">Почта</string>
    <string name="password">Пароль</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="child">Ребенок</string>
    <string name="parent">Родитель</string>
    <string name="text_sync_parent_phone_with_child">Чтобы связать телефон ребёнка с телефоном родителя</string>
    <string name="text_enter_child_code">Введите код, полученный в приложении родителя</string>
    <string name="text_sync_child_phone_with_parent">Чтобы увидеть ребёнка на карте, установите на его телефон приложение “Care me”</string>
    <string name="text_show_child_code">И введите этот код</string>
    <string name="my_child">Мои дети</string>
    <string name="subscribe">Подписка</string>
    <string name="settings">Настройки</string>
    <string name="more_functions">Дополнительно</string>
    <string name="child_movement">Передвижение ребенка</string>
    <string name="chat">Чат</string>
    <string name="sound_around_phone">Звук вокруг телефона</string>
    <string name="send_signal">Отправить сигнал</string>
    <string name="add_kid">Добавить ребенка</string>
    <string name="first_name">Имя</string>
    <string name="second_name">Фамилия</string>
    <string name="text_send_signal">Отправить громкий сигнал ребенку Если ваш ребенок не слышить ваш звонок</string>
    <string name="button_send_signal">Отправить сигнал</string>
    <string name="button_record_sound">Записать звук</string>
    <string name="text_record_sound">Записать звук вокруг телефона Контролируйте окружение вашего ребенка</string>
    <string name="places">Места</string>
    <string name="support">Горячая линия</string>
    <string name="call">Позвонить</string>
    <string name="message_call_support">Позвоните колл центру Задавайте свои вопросы и получайте совет</string>
    <string name="press_again_for_exit">Нажмите еще раз, чтобы выйти</string>
    <string name="place_name">Название места:</string>
    <string name="text_place_address">Адрес места:</string>
    <string name="seekbar_value">%1$d м радиус</string>
    <string name="send_alarm_signal">Подать сигнал тревоги</string>
    <string name="press_this_button">нажми эту кнопку, если ты в опасности</string>
    <string name="login_error">Incorrect Login or Password</string>
    <string name="loading">Loading</string>
    <string name="skip">Пропустить</string>
    <string name="register_kid">Зарегистрировать ребенка</string>
    <string name="ok">ОК</string>
    <string name="edit">Изменить</string>
    <string name="request_permissions">Для работы приложения необходимо дать разрешение</string>
    <string name="name">Имя</string>
    <string name="error_repeat_later">Произошла ошибка, повторите позже</string>
    <string name="need_to_set_place_name">Необходимо дать название для места!</string>
    <string name="something_went_wrong">Что-то пошло не так...</string>
    <string name="place_saved">Безопасное место добавлено!</string>
    <string name="error_kid_session_empty">Невозможно выполнить данную операцию, так как ребенок не заходил в приложение</string>
    <string name="send_signal_notification">Нажмите сюда, чтобы отключить сигнал</string>
</resources>
