<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/buttons_root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:baselineAligned="false"
    android:paddingStart="8dp"
    android:paddingEnd="8dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="top|center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/button_a_to_b"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="8dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:src="@drawable/ic_movementround3x" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/child_movement"
            android:textAlignment="center" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="top|center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/button_chat"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="8dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:src="@drawable/ic_chatround3x" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/chat"
            android:textAlignment="center" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="top|center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/button_microphone"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="8dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:src="@drawable/ic_microphoneround3x" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="@string/sound_around_phone"
            android:textAlignment="center" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="top|center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/button_send_signal"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="8dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:src="@drawable/ic_sendsignalround3x" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/send_signal"
            android:textAlignment="center" />
    </LinearLayout>
</LinearLayout>
